--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 
 /VarosiForgalom/obj
 /VarosiForgalom/.vs/VarosiForgalom
+/VarosiForgalom/.vs/ProjectEvaluation
+/VarosiForgalom/bin/Debug/net8.0/VarosiForgalom.dll
+/VarosiForgalom/bin/Debug/net8.0/VarosiForgalom.exe
+/VarosiForgalom/bin/Debug/net8.0/VarosiForgalom.pdb
